# Cursor-Tools

./: .gitignore  .pre-commit-config.yaml  .tool-versions  Makefile  README.md  app-status-maintenance.md  fix_paths.py  jira-ticket-app-status-maintenance.md  new.md
mcp_server/: MCP_SETUP_SUMMARY.md  MCP_TOOLS_REFERENCE.md  README.md  cursor-docs-index.json  databases.json  pyproject.toml  requirements.txt  server.py  tools_bitbucket.py  tools_confluence.py  tools_db.py  tools_docs.py  tools_env.py  tools_fetch.py  tools_git.py  tools_google_search.py  tools_jira.py  tools_logs.py  tools_memory.py  tools_postman.py  tools_postman_official.py  tools_project_info.py  tools_search.py  utils.py
mcp_server/docs/: BITBUCKET_MCP_SETUP.md  BITBUCKET_USAGE.md  CONFLUENCE_MCP_SETUP.md  CONFLUENCE_USAGE.md  DB_USAGE.md  DOCS_USAGE.md  ENV_USAGE.md  FETCH_USAGE.md  GIT_USAGE.md  GOOGLE_SEARCH_USAGE.md  JIRA_MCP_SETUP.md  JIRA_USAGE.md  LOGS_USAGE.md  MEMORY_USAGE.md  POSTMAN_MCP_USAGE.md  POSTMAN_OFFICIAL_USAGE.md  POSTMAN_USAGE.md  PROJECT_INFO_USAGE.md  SEARCH_USAGE.md  SETUP_USAGE.md  TEAM_SETUP_GUIDE.md  TOOLS_USAGE.md
mcp_server/queries/: query.sql
queries/: result.md
scripts/: README_affected_apis.md  affected_apis.config.json  affected_apis.config.json.example  affected_apis.py
