[project]
name = "cursor-tools-mcp"
version = "0.1.0"
description = "MCP server for mtp-base-pricing backend"
requires-python = ">=3.14"
dependencies = ["mcp>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
target-version = ["py314"]

[tool.isort]
profile = "black"
line_length = 120
