[project]
name = "cursor-tools-mcp"
version = "0.1.1"
description = "MCP server for mtp-base-pricing backend"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests",
    "python-dotenv",
    "psycopg2-binary>=2.9.0",
    "certifi",
    "pre-commit>=4.0.0",
]

[project.scripts]
mcp-server = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 120
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 120
